# intrepid_manipulation

./: .gitmodules  README.md
grasp_pipeline_demo/: CMakeLists.txt  package.xml
grasp_pipeline_demo/config_robot/: j2s6s200_grasp_data.yaml  objects_config.yaml
grasp_pipeline_demo/include/grasp_pipeline_demo/: object_builder.h
grasp_pipeline_demo/launch/: grasp_pipeline_demo.launch
grasp_pipeline_demo/launch/rviz/: grasps.rviz
grasp_pipeline_demo/src/: grasp_pipeline_demo.cpp  object_builder.cpp
intrepid_bringup/: CMakeLists.txt  package.xml
intrepid_bringup/launch/: intrepid_manipulation_bringup.launch
intrepid_deep_grasp_demo/: CMakeLists.txt  intrepid_manipulation_gui.xml  package.xml
intrepid_deep_grasp_demo/config/: dex-net_4.0_pj.yaml  dexnet_config.yaml  gpd_config.yaml  jaco_description.yaml  objects_config.yaml  poses_config.yaml
intrepid_deep_grasp_demo/config/camera_calib/: gazebo_camera.yaml  realsense_camera.intr  realsense_camera.yaml
intrepid_deep_grasp_demo/include/intrepid_deep_grasp_demo/: deep_grasp_demo.h  deep_pick_place_task.h  deep_pick_task.h  intrepid_manipulation_gui.h  object_builder.h  pose_builder.h
intrepid_deep_grasp_demo/launch/: dexnet_demo.launch  dexnet_demo_gazebo.launch  gpd_demo.launch  gpd_demo_gazebo.launch  gpd_manipulation.launch  republish_filtered_cloud.launch
intrepid_deep_grasp_demo/src/: calculate_transform.cpp  deep_grasp_demo.cpp  deep_grasp_demo_node.cpp  deep_pick_place_task.cpp  deep_pick_task.cpp  intrepid_manipulation_gui.cpp  object_builder.cpp  pose_builder.cpp  republish_filtered_cloud.cpp
intrepid_manipulation_msgs/: CMakeLists.txt  package.xml
intrepid_manipulation_msgs/action/: PickupFrom.action  PickupObject.action  PlaceOn.action
intrepid_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
intrepid_moveit_config/config/: fake_controllers.yaml  intrepid.srdf  j2s6s200.srdf  j2s6s200_vogui.srdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  sensors_kinect_depthmap.yaml  sensors_kinect_pointcloud.yaml
intrepid_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  intrepid.rviz  intrepid_moveit.launch  intrepid_moveit_controller_manager.launch.xml  intrepid_sim_demo.launch  j2s6s200_demo.launch  j2s6s200_gazebo_demo.launch  j2s6s200_moveit_controller_manager.launch.xml  j2s6s200_ros_control_moveit_controller_manager.launch.xml  j2s6s200_virtual_robot_demo.launch  move_group.launch  move_group_j2s6s200.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
intrepid_moveit_config/scripts/: generate_path_constraints.cpp
intrepid_moveit_grasps_demo/: CMakeLists.txt  package.xml
intrepid_moveit_grasps_demo/launch/: grasp_pipeline_demo.launch
intrepid_moveit_grasps_demo/launch/rviz/: grasps.rviz
intrepid_moveit_grasps_demo/src/: grasp_pipeline_demo.cpp  object_builder.cpp
intrepid_moveit_servo/: CMakeLists.txt  package.xml
intrepid_moveit_servo/config/: kinova_robot_config.yaml  sim_kinova_robot_config.yaml
intrepid_moveit_servo/launch/: kinova_moveit_servo.launch
intrepid_robot_description/: CMakeLists.txt  package.xml
intrepid_robot_description/urdf/robots/: j2s6s200_rbvogui.xacro  j2s6s200_standalone.xacro
intrepid_robot_description/urdf/structures/: intel_d435.urdf.xacro  realsense2vgc10_support.urdf.xacro
intrepid_simple_sim/: CMakeLists.txt  package.xml
intrepid_simple_sim/launch/: simulation.launch
