<?xml version="1.0"?>
<package format="2">
  <name>grasp_pipeline_demo</name>
  <version>0.0.0</version>
  <description>The grasp_pipeline_demo package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="mbeneyto@robotnik.es">maria</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>moveit_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>roscpp</depend>
  <depend>moveit_visual_tools</depend>
  <depend>rviz_visual_tools</depend>
  


  <build_depend>moveit_grasps</build_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
